--- a/css/estilos.css
+++ b/css/estilos.css
@@ -14,6 +14,13 @@ body {
   font-family: "Roboto", sans-serif;
 }
 
+.contenedor_main {
+  width: 100%;
+  background-color: var(--colorprimario);
+  align-items: center;
+  justify-content: space-around;
+}
+
 .contenedor_nav {
   height: 60px;
   background-color: var(--colorsecundario);
@@ -96,22 +103,6 @@ ul {
 /*-------------------------------------------------------------------*/
 /*Comienzo de la parte main*/
 /*-------------------------------------------------------------------*/
-.contenedor_main {
-  width: 100%;
-  height: calc(100% - 60px);
-  background-color: var(--colorprimario);
-  display: grid;
-  grid-template-columns: 200px 5% 1fr 5% 1fr 10%;
-  grid-template-rows: 50px 170px repeat(2, 1fr) 100px;
-  grid-template-areas:
-    "menu header header header header header"
-    "menu . dinero . actividad ."
-    "menu . . . actividad . "
-    "menu . . . actividad . "
-    "menu footer footer footer footer footer";
-  align-items: center;
-  justify-content: space-around;
-}
 
 .contenedor_ayuda {
   grid-row-start: 1;
@@ -171,12 +162,12 @@ ul {
 
 .navigation_menu {
   grid-area: menu;
-    width: 100%;
-    height: 100%;
-    display: fle;
-    flex-direction: column;
-    align-items: center;
-    border-right: 1px solid #e0e0e0;
+  width: 100%;
+  height: 100%;
+  display: none;
+  flex-direction: column;
+  align-items: center;
+  border-right: 1px solid #e0e0e0;
 }
 
 .navigation_menu a {
@@ -479,6 +470,7 @@ span {
 .ruleta {
   grid-area: ruleta;
 }
+
 .apuestas {
   grid-area: apuestas;
   display: grid;
@@ -488,8 +480,9 @@ span {
     "info"
     "."
     "btn_apuestas";
-    user-select: none;
+  user-select: none;
 }
+
 .contenedor_info {
   grid-area: info;
   display: flex;
@@ -497,73 +490,33 @@ span {
   justify-content: center;
   align-items: center;
 }
-.contenedor_info #enviar_apuestas
-{
+
+.contenedor_info #enviar_apuestas {
   padding: 15px;
-  width: 150px;
+  width: 110px;
   border-radius: 5px;
   border: none;
   background-color: var(--colorsecundario);
   color: var(--colorprimario);
   transition: all .4s ease;
+  grid-area: "enviarrespuestas";
 }
-.contenedor_info #enviar_apuestas:hover
-{
+
+.contenedor_info #enviar_apuestas:hover {
   cursor: pointer;
 }
 
-.input_apuestas
-{
+.input_apuestas {
   padding: 10px;
   width: 150px;
-}
-.contenedor_btn {
-  grid-area:btn_apuestas;
-  width: 100%;
-  gap: 10px;
+  grid-area: "inputapuestas";
 }
 
-.boton-ruleta {
-  background-color: #e4f0f8;
-  width: 100px;
-  border-radius: 10px;
+.contenedor_apuestas {
+  width: 100%;
   display: flex;
   justify-content: center;
-  align-items: center;
-  color: #009ee3;
-  font-size: 17px;
-  font-weight: 600;
-  border: none;
-  padding: 10px;
-}
-
-.boton-ruleta:hover {
-  background-color: #d0e6f5;
-  cursor: pointer;
-}
-
-.contenedor_juego h3 {
-  font-size: 17px;
-  font-weight: 400;
-  margin-left: 30px;
-}
-
-.ruleta_girar {
-  background-color: red;
-  width: 50%;
-  height: 95%;
-  border-radius: 50%;
-}
-
-.btn_menu {
-  height: auto;
-  width: auto;
-}
-
-button {
-  border: 0;
-  margin: 0;
-  padding: 0;
+  gap: 10px;
 }
 
 .contenedor-ruleta {
@@ -572,61 +525,42 @@ button {
   justify-content: center;
   align-items: center;
 }
-.contenedor-ruleta #ruleta_img
-{
+
+.contenedor-ruleta #ruleta_img {
   width: 300px;
   transition: all .5s ease;
 }
 
 @keyframes rotate {
   0% {
-    transform: rotate( 0deg );
+    transform: rotate(0deg);
   }
+
   100% {
-    transform: rotate( 360deg );
+    transform: rotate(360deg);
   }
-};
-
-.contenedor-ruleta .marcador {
-  position: absolute;
-  left: 50%;
-  top: 0;
-  margin-left: -25px;
-  width: 0;
-  height: 0;
-  border: 25px solid #fff;
-  border-left-color: transparent;
-  border-right-color: transparent;
-  border-bottom-color: transparent;
-  z-index: 500;
 }
 
-#button-start {
-  position: absolute;
-  left: 50%;
-  top: 50%;
-  width: 80px;
-  height: 80px;
-  font-weight: bold;
-  background: #ffffff;
-  border-radius: 50%;
-  z-index: 600;
-  cursor: pointer;
-  transform: translate(-50%, -50%);
-}
+@media screen and (min-width: 850px) {
+  .contenedor_main {
+    width: 100%;
+    height: calc(100% - 60px);
+    background-color: var(--colorprimario);
+    display: grid;
+    grid-template-columns: 200px 5% 1fr 5% 1fr 10%;
+    grid-template-rows: 50px 170px repeat(2, 1fr) 100px;
+    grid-template-areas:
+      "menu header header header header header"
+      "menu . dinero . actividad ."
+      "menu . . . actividad . "
+      "menu . . . actividad . "
+      "menu footer footer footer footer footer";
+    align-items: center;
+    justify-content: space-around;
+  }
 
-.pie {
-  position: absolute;
-  width: 300px;
-  height: 300px;
-  border-radius: 50%;
-  clip: rect(0px, 150px, 300px, 0px);
-}
+  .navigation_menu {
+    display: flex;
+  }
 
-.hold {
-  position: absolute;
-  width: 300px;
-  height: 300px;
-  border-radius: 50%;
-  clip: rect(0px, 300px, 300px, 150px);
 }
